# sly_sudoku

./: Cargo.toml  readme.md  rust-toolchain.toml
.cargo/: config.toml
src/: board.rs  config.rs  events.rs  lens.rs  lib.rs  main.rs  menu.rs  ui.rs
src/state/: loading.rs  mod.rs  playing.rs
