[package]
name = "sly_sudoku"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9" }
bevy_tweening = "0.5"
strum = "0.24"
strum_macros = "0.24"
sudoku-variants = "0.2.1"

[patch.crates-io]
# few small changes for bevy 0.9
bevy_tweening = { git = "https://github.com/slyedoc/bevy_tweening" }